# zksync2-python-async

./: README.md  pyproject.toml  requirements.txt  setup.cfg
examples/: 01_deposit.py  02_transfer.py  03_transfer_erc20_token.py  04_deploy_create.py  05_deploy_create_with_ctor.py  06_deploy_create_with_deps.py  07_deploy_create2.py  08_deploy_create2_deps.py  09_execute_contract.py  10_execute_legacy.py  11_withdrawal.py  12_misc.py
tests/: test_contract_deployer.py  test_eip712_structed.py  test_eth_provider.py  test_eth_signer.py  test_paymaster.py  test_transaction712.py  test_zksync_contract.py  test_zksync_web3.py
zksync2/asynchronous/manage_contracts/: contract_factory.py  erc20_contract.py  eth_token.py  l1_bridge.py  l2_bridge.py  nonce_holder.py  paymaster_utils.py  zksync_contract.py
zksync2/asynchronous/module/: middleware.py  module_builder.py  zksync_module.py  zksync_provider.py
zksync2/asynchronous/provider/: provider.py
zksync2_async/core/: request_types.py  response_types.py  utils.py
zksync2_async/manage_contracts/: contract_encoder_base.py  contract_factory.py  erc20_contract.py  eth_token.py  l1_bridge.py  l2_bridge.py  nonce_holder.py  paymaster_utils.py  precompute_contract_deployer.py  zksync_contract.py
zksync2_async/module/: middleware.py  module_builder.py  zksync_module.py  zksync_web3.py
zksync2_async/provider/: provider.py
zksync2_async/signer/: __init__.py  eth_signer.py
zksync2_async/transaction/: transaction712.py  transaction_builders.py
zksync2_async/utils/: abi.py  formatters.py  models.py  rpc_endpoints.py
(+21 files in other folders)
