[tool.poetry]
name = "zksync2-python-async"
authors = [
    "Viktor Yastrebov <vyastrebov@vareger.com>",
    "Kirill Kiryanov <kirill@kiryanovkd.com>",
]
description = "zkSync2 async python client sdk"
readme = "README.md"
version = "0.1.2"
packages = [{include = "zksync2_async"}]

[tool.poetry.dependencies]
python = "^3.10"
eip712-structs = "^1.1.0"
web3 = "^6.3.0"
eth-tester = "^0.9.0b1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
